--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,6 @@ h1 {
 	border-left: 10px solid #f6ff00;
 	font-family: 'Oswald', sans-serif;
 	font-size: 50px;
-
 }
 
 #logos {
@@ -92,7 +91,7 @@ li.logo {
 h2, h3 {
 	margin: 20px 0;
 	display: inline-block;
-	text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
 
 h2{
@@ -119,10 +118,10 @@ h2 a:hover, h3 a:hover, h4 a:hover {
 #portfolio { 
 	width: 100%;
 	margin: 0 auto;
-	background: url('../img/logo-outline.png') 50% 85% no-repeat,
+	background: url('../img/logo-outline.png') 50% 90% no-repeat,
 				url('../img/hypnotize.png');
 	border-top: 10px solid #e7e7e7;
-	padding: 1vh 0 10vh 0;
+	padding: 1vh 0 30vh 0;
 	bottom:0;
 }
 
@@ -227,10 +226,7 @@ video#bgvid {
 	width: 5vw;
 	height: 5vw;
 	position: relative;
-	top: 0;
-	right: 0;
 	float:right;
-	display: inline-block;
 	background: url('../img/cross-icon-white.png') 50% 50% no-repeat;
 	background-color:black;
 }
@@ -245,13 +241,26 @@ video#bgvid {
 	width: 96%;
 	padding: 2% 2%;
 	background: url('../img/congruent_outline.png') 0% 0%;
+	display: none;
+}
+
+.project-box-header {
+	width:100%;
+	height: auto;
+	overflow: none;
+}
+
+.project-box-footer{
+	width:100%;
+	height: auto;
+	display: inline-block;
+
 }
 
 .tags { 
-	display:inline-block;
-	position: relative;
 	right: 0;
 	float:right;
+		overflow: overlay;
 }
 
 .tags li { 
