--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ html,body {
     overflow-x: hidden;
 }
 
+.material-icons {
+	font-size: 18px;
+}
+
 .break-5vh { 
 	width: 100%;
 	height: 5vh;
@@ -31,7 +35,7 @@ body {
 	background: url('../img/congruent_outline.png');
 	background-color:#333333;
 	width: 100%;
-	-webkit-animation: backgroundScroll 40s linear infinite;
+	-webkit-animation: backgroundScroll 20s linear infinite;
     -webkit-animation-fill-mode: forwards;
     animation: backgroundScroll 40s linear infinite;
     animation-fill-mode: forwards;
@@ -89,7 +93,7 @@ li.logo {
 }
 
 h2, h3 {
-	margin: 20px 0;
+	margin: 10px 0;
 	display: inline-block;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 }
@@ -244,23 +248,38 @@ video#bgvid {
 	display: none;
 }
 
-.project-box-header {
+#project-box-header, #project-box-footer {
 	width:100%;
 	height: auto;
 	overflow: none;
+	display: inline-block; 
 }
 
-.project-box-footer{
-	width:100%;
-	height: auto;
-	display: inline-block;
+#project-box-header{
+	padding: 0 0 2vw 0;
+} 
 
+#project-box-footer {
+	padding: 2vw 0 0 0;
+}
+
+#project-box-wrap { 
+	width:100%;
+	display: inline-block;
+	position: relative;
+}
+
+#project-description {
+	display: inline-block;
+	width: 48%;
+	float:right;
+	text-align: left;
 }
 
 .tags { 
 	right: 0;
 	float:right;
-		overflow: overlay;
+	overflow: overlay;
 }
 
 .tags li { 
@@ -317,10 +336,21 @@ video#bgvid {
         display: none;
     }
 
+    #youtube_video {
+		width: 100%;
+		height: auto;
+    }
+
     .port-box{ 
 		width: 95%;
 		padding-top: 45%;
 		margin: 2% 2.5%;
+    }
+
+    #project-description {
+		width: 98%;
+		float: left;
+		padding: 1em 0;
     }
 
 	#portfolio { 
