Adding robots.txt/sitemap.xml

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,7 +251,7 @@ video#bgvid {
 .expand-project { 
 	width: 96%;
 	padding: 2% 2%;
-	background: url('../img/congruent_outline.png') 0% 0%;
+	background: url('../img/prism.png') 0% 0%;
 	display: none;
 	border-radius: 20px; 
 }
